reorganize code structure

--- a/frontend/frontend.ipynb
+++ b/frontend/frontend.ipynb
@@ -30,10 +30,10 @@
    ],
    "source": [
     "es = Elasticsearch(\n",
-    "        'https://127.0.0.1:9200',\n",
-    "        basic_auth=('elastic', 'gHcmDFVtcTaCkB4QPVHSYkEe7bTbYd!x'),\n",
-    "        verify_certs=False\n",
-    "    )"
+    "    \"https://127.0.0.1:9200\",\n",
+    "    basic_auth=(\"elastic\", \"gHcmDFVtcTaCkB4QPVHSYkEe7bTbYd!x\"),\n",
+    "    verify_certs=False,\n",
+    ")"
    ]
   },
   {
@@ -119,7 +119,7 @@
     "    headers = {\"X-Fission-Params-Date\": date}\n",
     "    response = requests.get(url, headers=headers)\n",
     "    if response.status_code == 200:\n",
-    "        return response.json().get('rainfall_amount', 0)\n",
+    "        return response.json().get(\"rainfall_amount\", 0)\n",
     "    else:\n",
     "        return \"error\""
    ]
@@ -135,7 +135,7 @@
     "    headers = {\"X-Fission-Params-Date\": date}\n",
     "    response = requests.get(url, headers=headers)\n",
     "    if response.status_code == 200:\n",
-    "        return response.json().get('center_accidents', 0)\n",
+    "        return response.json().get(\"center_accidents\", 0)\n",
     "    else:\n",
     "        return \"error\""
    ]
@@ -171,27 +171,21 @@
     "accident_data = []\n",
     "rainfall_data = []\n",
     "# set date range from 2023-04-01 to 2023-09-30\n",
-    "date_range = pd.date_range(start='2023-04-01', end='2023-09-30')\n",
+    "date_range = pd.date_range(start=\"2023-04-01\", end=\"2023-09-30\")\n",
     "\n",
     "for date in date_range:\n",
-    "    date_str = date.strftime('%Y-%m-%d')\n",
+    "    date_str = date.strftime(\"%Y-%m-%d\")\n",
     "    accident_count = get_accident_count(date_str)\n",
     "    rainfall = get_rainfall(date_str)\n",
-    "    accident_data.append({\n",
-    "        'Date': date,\n",
-    "        'Accident Count': accident_count\n",
-    "    })\n",
-    "    rainfall_data.append({\n",
-    "        'Date': date,\n",
-    "        'Rainfall (mm)': rainfall\n",
-    "    })\n",
+    "    accident_data.append({\"Date\": date, \"Accident Count\": accident_count})\n",
+    "    rainfall_data.append({\"Date\": date, \"Rainfall (mm)\": rainfall})\n",
     "\n",
     "accident_df = pd.DataFrame(accident_data)\n",
     "rainfall_df = pd.DataFrame(rainfall_data)\n",
     "\n",
     "# set date as the index\n",
-    "accident_df.set_index('Date', inplace=True)\n",
-    "rainfall_df.set_index('Date', inplace=True)\n",
+    "accident_df.set_index(\"Date\", inplace=True)\n",
+    "rainfall_df.set_index(\"Date\", inplace=True)\n",
     "\n",
     "print(accident_df.head())\n",
     "print(rainfall_df.head())"
@@ -231,9 +225,9 @@
     "combined_df = pd.merge(rainfall_df, accident_df, left_index=True, right_index=True)\n",
     "print(combined_df.head())\n",
     "\n",
-    "# scatter plot \n",
+    "# scatter plot\n",
     "plt.figure(figsize=(8, 4))\n",
-    "plt.scatter(combined_df['Rainfall (mm)'], combined_df['Accident Count'], alpha=0.5)\n",
+    "plt.scatter(combined_df[\"Rainfall (mm)\"], combined_df[\"Accident Count\"], alpha=0.5)\n",
     "\n",
     "# draw a best fit line\n",
     "# X = combined_df['Rainfall (mm)'].values.reshape(-1, 1)\n",
@@ -244,9 +238,9 @@
     "# best_fit_line = model.predict(X)\n",
     "# plt.plot(combined_df['Rainfall (mm)'], best_fit_line, color='red', label='Best fit line')\n",
     "\n",
-    "plt.title('Accident Count in Melbourne vs. Rainfall')\n",
-    "plt.xlabel('Rainfall (mm)')\n",
-    "plt.ylabel('Accident Count')\n",
+    "plt.title(\"Accident Count in Melbourne vs. Rainfall\")\n",
+    "plt.xlabel(\"Rainfall (mm)\")\n",
+    "plt.ylabel(\"Accident Count\")\n",
     "plt.grid(True)\n",
     "plt.show()"
    ]
