--- a/frontend.ipynb
+++ b/frontend.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,101 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/kejing/miniconda3_py38/lib/python3.8/site-packages/elasticsearch/_sync/client/__init__.py:399: SecurityWarning: Connecting to 'https://127.0.0.1:9200' using TLS with verify_certs=False is insecure\n",
-      "  _transport = transport_class(\n"
-     ]
-    }
-   ],
-   "source": [
-    "es = Elasticsearch(\n",
-    "        'https://127.0.0.1:9200',\n",
-    "        basic_auth=('elastic', 'gHcmDFVtcTaCkB4QPVHSYkEe7bTbYd!x'),\n",
-    "        verify_certs=False\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def secret(key: str) -> str:\n",
-    "#     \"\"\"Read secret from k8s secret volume\"\"\"\n",
-    "#     with open(f\"/secrets/default/secrets/{key}\", \"r\", encoding=\"utf-8\") as f:\n",
-    "#         return f.read()\n",
-    "\n",
-    "\n",
-    "# host = secret(\"ES_URL\")\n",
-    "# basic_auth = (secret(\"ES_USERNAME\"), secret(\"ES_PASSWORD\"))\n",
-    "# es = Elasticsearch(host, basic_auth=basic_auth, verify_certs=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # 定义查询语句\n",
-    "# query = {\n",
-    "#     \"query\": {\n",
-    "#         \"match_all\": {}\n",
-    "#     }\n",
-    "# }\n",
-    "\n",
-    "# # 执行查询\n",
-    "# weather_index_name = 'bom_melbourne_weather_past'\n",
-    "# response = es.search(index=weather_index_name, body=query, size=500)  # size 参数设置为较大值以获取更多数据\n",
-    "# weather_hits = response['hits']['hits']\n",
-    "# weather_data = []\n",
-    "\n",
-    "# for hit in weather_hits:\n",
-    "#     source = hit['_source']\n",
-    "#     weather_data.append({\n",
-    "#         'Date': source['Date'],\n",
-    "#         'Rainfall (mm)': source['Rainfall (mm)']\n",
-    "#     })\n",
-    "\n",
-    "# weather_df = pd.DataFrame(weather_data)\n",
-    "# weather_df['Date'] = pd.to_datetime(weather_df['Date'])\n",
-    "# weather_df = weather_df.sort_values('Date')\n",
-    "# weather_df.set_index('Date', inplace=True)\n",
-    "\n",
-    "# weather_df\n",
-    "\n",
-    "# # # 转换 Date 列为日期格式\n",
-    "# # df['Date'] = pd.to_datetime(df['Date'])\n",
-    "\n",
-    "# # # 按日期排序\n",
-    "# # df = df.sort_values('Date')\n",
-    "\n",
-    "# # # 设置 Date 列为索引\n",
-    "# # df.set_index('Date', inplace=True)\n",
-    "\n",
-    "# # # 显示前几行数据\n",
-    "# # print(df.head())\n",
-    "\n",
-    "# # # 数据分析和可视化示例\n",
-    "# # plt.figure(figsize=(12, 6))\n",
-    "# # plt.plot(df.index, df['Rainfall (mm)'], marker='o')\n",
-    "# # plt.title('Rainfall Over Time')\n",
-    "# # plt.xlabel('Date')\n",
-    "# # plt.ylabel('Rainfall (mm)')\n",
-    "# # plt.grid(True)\n",
-    "# # plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,15 +24,16 @@
     "    url = f\"http://localhost:9090/bom-past-rainfall/rainfall/{date}\"\n",
     "    headers = {\"X-Fission-Params-Date\": date}\n",
     "    response = requests.get(url, headers=headers)\n",
-    "    if response.status_code == 200:\n",
-    "        return response.json().get('rainfall_amount', 0)\n",
+    "    j = response.json()\n",
+    "    if j['ok']:\n",
+    "        return j.get('rainfall_amount', 0)\n",
     "    else:\n",
-    "        return \"error\""
+    "        return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,15 +41,16 @@
     "    url = f\"http://localhost:9090/traffic-accident/accident-count/{date}\"\n",
     "    headers = {\"X-Fission-Params-Date\": date}\n",
     "    response = requests.get(url, headers=headers)\n",
-    "    if response.status_code == 200:\n",
-    "        return response.json().get('center_accidents', 0)\n",
+    "    j = response.json()\n",
+    "    if j['ok']:\n",
+    "        return j.get('center_accidents', 0)\n",
     "    else:\n",
-    "        return \"error\""
+    "        return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
